--- a/style/scss.scss
+++ b/style/scss.scss
@@ -2,17 +2,15 @@ html, body {
     margin: 0;
     padding: 0;
 }
- 
+
 li {
     list-style-type: none;
 }
-
 a {
     text-decoration: none;
     color: #fff;
     letter-spacing: 2px;
 }
-
 a:hover {
     text-decoration: none;
     color: #fff;
@@ -21,7 +19,6 @@ a:hover {
 .red-point {
     color: #fa5c65;
 }
-
 h1 {
     font-family: 'Montserrat';
     font-weight: bold;
@@ -29,22 +26,18 @@ h1 {
     color: #314a5b;
     letter-spacing: -1px;
     line-height: 1;
-
 }
-
 h2 {
     font-family: 'Open Sans' Regular;
     color: #b5b9c1;
     letter-spacing: 2px;
 }
-
 h3 {
     font-family: 'Open Sans';
     color: #f0454c;
     font-size: 14px;
     letter-spacing: 2px;
 }
-
 .more {
     margin: 30px 0 0 3px;
     a {
@@ -77,7 +70,6 @@ h3 {
             }
         }
         .header-top-menu {
-            
             margin: 26px 0 -208px 0;
             a {
                 color: #314a5b;
@@ -116,6 +108,34 @@ h3 {
             border: none;
             border-radius: 5px;
             cursor: pointer;
+        }
+        .modal {
+            .modal-header {
+                .modal-title {
+                    font-family: 'Montserrat';
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    color: #314a5b;
+                    letter-spacing: -1px;
+                    line-height: 1;
+                }
+            }
+            .name {
+                margin: 5px 5px 5px 5px;
+                padding-left: 10px;
+                border-color: #b5b9c1;
+                border-radius: 3px;
+                width: 80%;
+                font-family: 'Open Sans' Regular;
+                letter-spacing: 2px;
+                color: #314a5b;
+            }
+            .btn-primary {
+                background-color: #f0454c;
+                border: none;
+                width: 100px;
+                text-transform: uppercase;
+            }
         }
     }
 }
@@ -183,6 +203,7 @@ h3 {
         }
     }
 }
+
 .footer {
     margin: 20px 0 20px 0;
     .footer-info {
@@ -192,10 +213,12 @@ h3 {
             a {
                 margin: 0 10px 0 10px;
             }
-        }
-        h2 {
-            font-size: 14px;
+            h2 {
+                font-size: 14px;
+            }
         }
     }
 }
+
+/*# sourceMappingURL=stylesheet.css.map */
 
