--- a/style/scss.scss
+++ b/style/scss.scss
@@ -117,6 +117,34 @@ h3 {
             border-radius: 5px;
             cursor: pointer;
         }
+        .modal {
+            .modal-header {
+                .modal-title {
+                    font-family: 'Montserrat';
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    color: #314a5b;
+                    letter-spacing: -1px;
+                    line-height: 1;
+                }
+            }
+            .name {
+                margin: 5px 5px 5px 5px;
+                padding-left: 10px;
+                border-color: #b5b9c1;
+                border-radius: 3px;
+                width: 80%;
+                font-family: 'Open Sans' Regular;
+                letter-spacing: 2px;
+                color: #314a5b;
+            }
+            .btn-primary {
+                background-color: #f0454c;
+                border: none;
+                width: 100px;
+                text-transform: uppercase;
+            }
+        }
     }
 }
 
