--- a/style/scss.scss
+++ b/style/scss.scss
@@ -213,9 +213,12 @@ h3 {
             a {
                 margin: 0 10px 0 10px;
             }
-            h2 {
-                font-size: 14px;
-            }
+        }
+        .name-title {
+            
+            font-family: 'Open Sans Regular';
+            color: #b5b9c1;
+            letter-spacing: 2px;
         }
     }
 }
